# pico-w-zig

./: .env  .gitignore  README.md  Taskfile.yml
main-zig/: build.zig
main-zig/src/: main.zig  pico-sdk.zig
pico-c/: CMakeLists.txt  pico_sdk.c
